build(pom): Optimize input paths and JVM options.